Closed Bug 242948 Opened 20 years ago Closed 20 years ago

Attached files not imported from French Eudora

Categories

(MailNews Core :: Import, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: y.rouillard, Unassigned)

Details

(Keywords: fixed-aviary1.0)

Attachments

(1 file, 1 obsolete file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; fr; rv:1.6) Gecko/20040206 Firefox/0.8
Build Identifier: Mozilla Thunderbird version 0.6 (20040502)

When one tries to import his mail from Eudora French version, the mails are
correctly imported except all the attached files.
Instead there is the following text: 
Pièce jointe convertie : "/path/to/the/attached/file"



Reproducible: Always
Steps to Reproduce:
1. Receive an mail with an attached file in Eudora Frenc version
2. Import it in Thunderbird
3. Open the imported mail

Actual Results:  
No attached file but the following text
Pièce jointe convertie : "the/path/to/the/attached/file"
(replace the/path/to/the/attached/file with teh actual path of the attached file)

Expected Results:  
a mail with an attached file containing the file located at this path.

The reason of that bug is that in the french version of eudora, even the eudora
attachment line has be translated (which is an error I think).
As a result it is impossible to import attached files in other mail software
(not only Thunderbird but also outlook).
This patch simply adds the french eudora attachment line to the table of
Attachment Lines which is used by Thunderbird/Mozilla to detect the presence of
an attached file.
Corrects a little mistake in the previous patch
Attachment #147905 - Attachment is obsolete: true
Summary: Attached not imported from French Eudora → Attached files not imported from French Eudora
same bug in Japanese:  Bug 95613

confirming.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Cross posting from the Japanese bug:

Isn't this standard behavior for Eudora?  Do you want Mozilla change attachment
storage from 'Eudora-Style' to 'Mozilla-Style' on import?


The Eudora products I've seen (all in English) store attachments as separate
files in the file system, and just have a link to them in the body of the e-mail.

In other words, the attachments are not part of Eudora and not in the Eudora
mailbox files; they're separate files that Eudora merely points to.

I think it would be a separate RFE for Mozilla to import attachments from
'Eudora-Style' to 'Mozilla-Style'.
Yes the standard behaviour for Eudora is to detach attached file from mail and
to put them in a separate directory, leaving only a link to this file in the mail.

And when you import these mails from Mozilla/Thunderbird, Mozilla/Thunderbird
will reattach the files if they exists. It will import attachments from "Eudora
style" to "Mozilla style". This is how it works currently, at least when you
import mails from the standard english version. 

My problem is that it doesn't work with the French version.

It is sure debatable weither to keep the eudora style attachment or convert to
the mozilla style. Personnaly I prefer the current way, eudora attachment
converted, because it will be more consistent with the other mails you will
receive with Mozilla/Thunderbird.

And if we want to keep the eudora style, we should at least convert the file
link to an hyperlink.
Had a look at the japanese bug. If this problem exists for all the localized
versions of Eudora, a better way to fix this problem would be to detect the
version and to set the Eudora Attachment Line accordingly. I don't know how to
do this.
Product: MailNews → Core
Comment on attachment 147907 [details] [diff] [review]
Enable attached files from French Eudora mailboxes to be correctly imported 

Sure a more generic way to support all the Eudora languages would be better.
But for know, this is fine.
Attachment #147907 - Flags: review+
Comment on attachment 147907 [details] [diff] [review]
Enable attached files from French Eudora mailboxes to be correctly imported 

seek sr= from mscott
Attachment #147907 - Flags: superreview?(mscott)
Attachment #147907 - Flags: superreview?(mscott) → superreview+
fixed branch and trunk

I also fixed the tabbing issue in the original patch.

Yann, can you please verify the fix in the 11/29 0.9 nightly builds for us? Time
is short for 1.0 so testing help is much appreciated!
Status: NEW → RESOLVED
Closed: 20 years ago
Keywords: fixed-aviary1.0
Resolution: --- → FIXED
Ok, I will check this as soon as the 11/29 nighty build is out (checked at
ftp://ftp.mozilla.org/pub/mozilla.org/thunderbird/nightly/ but doesn't seem to
be yet there).
I have tested the 2004-11-30-05-0.9 build and it successfully imported attached
file from french eudora mailboxes. So the fix is good.

During these tests, I have noticed that only French Eudora version < 6.0 needs
this patch to be able to correctly import attached files.

Prior to version 6.0, Eudora was translated by a french firm which made the
mistake of translating the line introducing an attached file.

This mistake is no longer present in Eudora >= 6.0 which is translated by SoftNet.
Had a look at Bug 95613 which is the same bug for the Japanese version.
We can just add to the eudoraAttachLines table, the attachment line found in the
eudora mailbox joined.
ie:
static char *eudoraAttachLines[] = {
 	"Attachment Converted:",
	"Attachment converted:"
	"Attachment converted:",
        "Pièce jointe convertie :",
"\225\234\214\263\202\263\202\352\202\275\223\131\225\164\203\164\203\100\203\103\203\213\201\106"
}

and add 24 in the array containg the size of the strings.
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: