Bug #242948 --> Attached files not imported from French Eudora profiles for Thunderbird.

Patch by Yann Rouillard.